--- a/mount.crypt.ini
+++ b/mount.crypt.ini
@@ -2,32 +2,26 @@
 cryptsetup=/sbin/cryptsetup
 mount=/bin/mount
 
-[backup_7.3T_1]
-UUID=4a3ea0d2-33cd-49eb-b3f7-5bdfb7a73633
-mounts=/mnt/backup/backup_7.3T_1
+# Mount Definitions:
+# ------------------
+# NOTE: The mapper-name and mount-points need to also be defined and
+# match the entries for these respective drives in /etc/fstab.
+#
+# [mapper-name]
+# UUID = abc...def
+# mounts = /mnt/mount-point,/mnt/other-mount-point,...
+#
+# Optionally include any commands to run after a successful mount
+# run_progs = my-script.sh --some-flag,my-other-script.sh
+#
+# NOTE: Lists MUST NOT have ANY spaces nor double-quotes
+# in-between the comma delimiter.
 
-[backup_7.3T_2]
-UUID=4cec462e-9887-4026-8006-cce6dc2b5f9b
-mounts=/mnt/backup/backup_7.3T_2
-
-[backup_7.3T_3]
-UUID=6b18acce-1bc9-46e6-be71-2a181b3fb725
-mounts=/mnt/backup/backup_7.3T_3
-
-[backup_7.3T_2016]
-UUID=9b4ecc2c-1770-4a8b-a0ae-984196659f52
-mounts=/mnt/backup/backup_7.3T_legacy_2016
-
-[external-nr]
-UUID=309e8b83-a077-4fbf-98fc-b56e2a0ba197
-mounts=/mnt/xfer/external-nr
-
-[backup_internal_3.6T_1]
-UUID=379cc93b-cc72-4589-a762-fba6caba379b
-mounts=/mnt/local-backupfs
+[backup]
+UUID=123ab45c-de67-8901-a234-bcd5efab678c
+mounts=/mnt/backup
 
 [data]
-UUID=0df00a94-15e6-4aeb-b590-1b75f063e994
-mounts=/mnt/data,/mnt/datafs,/opt/vbox
-run_progs=lxc start morpheus trinity,lxc list
-
+UUID=456ab45c-de67-8901-a234-bcd5efab601d
+mounts=/mnt/data,/opt/vms
+run_progs=lxc start testbox devbox,lxc list
