--- a/.travis.yml
+++ b/.travis.yml
@@ -39,11 +39,11 @@ install:
 
   # Replace dep1 dep2 ... with your dependencies
   #- conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION dep1 dep2 ...
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION -f requirements.txt
+  #- conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
   #- python setup.py install
-  - while read requirement; do conda install --yes $requirement; done < requirements.txt
-
+  
 # command to run tests
 script:
   #- pytest
