--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ python:
   #- "2.7"
   #- "3.3"
   #- "3.4"
-  - "3.6.1"
+  - "3.6"
 
 # command to install dependencies
 install:
@@ -39,7 +39,7 @@ install:
 
   # Replace dep1 dep2 ... with your dependencies
   #- conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION dep1 dep2 ...
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION -f requirements.txt
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION --file requirements.txt
   #- conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
   - source activate test-environment
   #- python setup.py install
