--- a/mountcrypt.ini
+++ b/mountcrypt.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 cryptsetup=/sbin/cryptsetup
 mount=/bin/mount
+unmount=/bin/umount
 
 # Mount Definitions:
 # ------------------
@@ -33,5 +34,5 @@ mounts=/mnt/backup
 UUID=456ab45c-de67-8901-a234-bcd5efab601d
 mounts=/mnt/data,/opt/vbox
 run_progs=lxc start testbox devbox,lxc list
-
+run_progs_unmount=lxc stop testbox devbox,lxc list
 
