INI update:semi-colons replace commas

--- a/mountcrypt.ini
+++ b/mountcrypt.ini
@@ -16,14 +16,16 @@ unmount=/bin/umount
 # mount.crypt.ini entry format:
 #
 # [mapper-name]
-# UUID = abc...def
-# mounts = /mnt/mount-point,/mnt/other-mount-point,...
+# UUID=abc...def
+# mounts=/mnt/mount-point,/mnt/other-mount-point,...
 #
 # Optionally include any commands to run after a successful mount
-# run_progs = my-script.sh --some-flag,my-other-script.sh
+# and before an unmount.
+# run_progs=my-script.sh --some-flag,my-other-script.sh
+# run_progs_unmount=pkill -u testuser
 # 
 # NOTE: Lists MUST NOT have ANY spaces nor double-quotes 
-# in-between the comma delimiter.
+# in-between the semi-colon delimiter.
 #
 
 [backup]
@@ -32,7 +34,6 @@ mounts=/mnt/backup
 
 [data]
 UUID=456ab45c-de67-8901-a234-bcd5efab601d
-mounts=/mnt/data,/opt/vbox
-run_progs=lxc start testbox devbox,lxc list
-run_progs_unmount=lxc stop testbox devbox,lxc list
-
+mounts=/mnt/data;/opt/vbox
+run_progs=lxc start testbox devbox;lxc list
+run_progs_unmount=lxc stop testbox devbox;lxc list
